--- a/mobile.html
+++ b/mobile.html
@@ -72,7 +72,7 @@
         <div id="loginSection">
             <p>請先使用您的 Google 帳號登入：</p>
             <div id="g_id_onload"
-                data-client_id="YOUR_GOOGLE_CLIENT_ID"
+                data-client_id="130403455153-cdmr57ri7qh3s6c8riul6q6hsi3arjf8.apps.googleusercontent.com"
                 data-context="signin"
                 data-ux_mode="popup"
                 data-callback="handleCredentialResponse">
@@ -95,13 +95,14 @@
     <script>
         // Firebase 配置
         const firebaseConfig = {
-            apiKey: "YOUR_FIREBASE_API_KEY",
-            authDomain: "YOUR_FIREBASE_AUTH_DOMAIN",
-            databaseURL: "YOUR_FIREBASE_DATABASE_URL",
-            projectId: "YOUR_FIREBASE_PROJECT_ID",
-            storageBucket: "YOUR_FIREBASE_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_FIREBASE_MESSAGING_SENDER_ID",
-            appId: "YOUR_FIREBASE_APP_ID"
+            apiKey: "AIzaSyArF8xncLwA3osSQ_o6yWIyuOc0TMrXRTY",
+            authDomain: "yingpei--login.firebaseapp.com",
+            databaseURL: "https://yingpei--login-default-rtdb.firebaseio.com",
+            projectId: "yingpei--login",
+            storageBucket: "yingpei--login.firebasestorage.app",
+            messagingSenderId: "261477282402",
+            appId: "1:261477282402:web:557f0be058e07cd642173b",
+            measurementId: "G-EB9PR17TJL"
         };
         
         // 初始化 Firebase
